// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for bitbucket cloud 1`] = `
<Fragment>
  <li>
    <FormattedMessage
      defaultMessage="onboarding.tutorial.with.jenkins.webhook.step1.sentence"
      id="onboarding.tutorial.with.jenkins.webhook.step1.sentence"
      values={
        Object {
          "link": <a
            href="http://bbs.enterprise.comPROJECT_KEY/admin/addon/admin/bitbucket-webhooks/bb-webhooks-repo-admin"
            rel="noopener noreferrer"
            target="_blank"
          >
            onboarding.tutorial.with.jenkins.webhook.bitbucketcloud.step1.link
          </a>,
        }
      }
    />
    <ul
      className="list-styled"
    >
      <li>
        <LabelActionPair
          translationKey="onboarding.tutorial.with.jenkins.webhook.step1.name"
        />
      </li>
      <li
        className="abs-width-600"
      >
        <p>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucket.step1.url"
          />
        </p>
        <CodeSnippet
          isOneLine={true}
          snippet="***JENKINS_SERVER_URL***/bitbucket-scmsource-hook/notify"
        />
      </li>
    </ul>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        Array [
          "triggers",
          "option",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucketcloud.step2"
    />
    <ul
      className="list-styled"
    >
      <li>
        <LabelActionPair
          translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucketcloud.step2.repo"
        />
      </li>
      <li>
        <LabelActionPair
          translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucketcloud.step2.pr"
        />
      </li>
    </ul>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        Array [
          "save",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucketcloud.step3"
    />
  </li>
</Fragment>
`;

exports[`should render correctly for bitbucket cloud: with branches disabled 1`] = `
<Fragment>
  <li>
    <FormattedMessage
      defaultMessage="onboarding.tutorial.with.jenkins.webhook.step1.sentence"
      id="onboarding.tutorial.with.jenkins.webhook.step1.sentence"
      values={
        Object {
          "link": <a
            href="http://bbs.enterprise.comPROJECT_KEY/admin/addon/admin/bitbucket-webhooks/bb-webhooks-repo-admin"
            rel="noopener noreferrer"
            target="_blank"
          >
            onboarding.tutorial.with.jenkins.webhook.bitbucketcloud.step1.link
          </a>,
        }
      }
    />
    <ul
      className="list-styled"
    >
      <li>
        <LabelActionPair
          translationKey="onboarding.tutorial.with.jenkins.webhook.step1.name"
        />
      </li>
      <li
        className="abs-width-600"
      >
        <p>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucket.step1.url"
          />
        </p>
        <CodeSnippet
          isOneLine={true}
          snippet="***JENKINS_SERVER_URL***/job/***JENKINS_JOB_NAME***/build?token=***JENKINS_BUILD_TRIGGER_TOKEN***"
        />
      </li>
    </ul>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        Array [
          "triggers",
          "option",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucketcloud.step2"
    />
    <ul
      className="list-styled"
    >
      <li>
        <LabelActionPair
          translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucketcloud.step2.repo"
        />
      </li>
    </ul>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        Array [
          "save",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucketcloud.step3"
    />
  </li>
</Fragment>
`;

exports[`should render correctly for bitbucket cloud: with no alm binding 1`] = `
<Fragment>
  <li>
    <FormattedMessage
      defaultMessage="onboarding.tutorial.with.jenkins.webhook.step1.sentence"
      id="onboarding.tutorial.with.jenkins.webhook.step1.sentence"
      values={
        Object {
          "link": "onboarding.tutorial.with.jenkins.webhook.bitbucketcloud.step1.link",
        }
      }
    />
    <ul
      className="list-styled"
    >
      <li>
        <LabelActionPair
          translationKey="onboarding.tutorial.with.jenkins.webhook.step1.name"
        />
      </li>
      <li
        className="abs-width-600"
      >
        <p>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucket.step1.url"
          />
        </p>
        <CodeSnippet
          isOneLine={true}
          snippet="***JENKINS_SERVER_URL***/bitbucket-scmsource-hook/notify"
        />
      </li>
    </ul>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        Array [
          "triggers",
          "option",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucketcloud.step2"
    />
    <ul
      className="list-styled"
    >
      <li>
        <LabelActionPair
          translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucketcloud.step2.repo"
        />
      </li>
      <li>
        <LabelActionPair
          translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucketcloud.step2.pr"
        />
      </li>
    </ul>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        Array [
          "save",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucketcloud.step3"
    />
  </li>
</Fragment>
`;

exports[`should render correctly for bitbucket server 1`] = `
<Fragment>
  <li>
    <FormattedMessage
      defaultMessage="onboarding.tutorial.with.jenkins.webhook.step1.sentence"
      id="onboarding.tutorial.with.jenkins.webhook.step1.sentence"
      values={
        Object {
          "link": <a
            href="http://bbs.enterprise.com/plugins/servlet/webhooks/projects/PROJECT_KEY/repos/repo-slug/create"
            rel="noopener noreferrer"
            target="_blank"
          >
            onboarding.tutorial.with.jenkins.webhook.bitbucket.step1.link
          </a>,
        }
      }
    />
    <ul
      className="list-styled"
    >
      <li>
        <LabelActionPair
          translationKey="onboarding.tutorial.with.jenkins.webhook.step1.name"
        />
      </li>
      <li
        className="abs-width-600"
      >
        <p>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucket.step1.url"
          />
        </p>
        <CodeSnippet
          isOneLine={true}
          snippet="***JENKINS_SERVER_URL***/bitbucket-scmsource-hook/notify?server_url=http://bbs.enterprise.com"
        />
        <Alert
          variant="info"
        >
          onboarding.tutorial.with.jenkins.webhook.bitbucket.step1.url.warning
        </Alert>
      </li>
    </ul>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        Array [
          "events",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucket.step2"
    />
    <ul
      className="list-styled"
    >
      <li>
        <LabelActionPair
          translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucket.step2.repo"
        />
      </li>
      <li>
        <LabelActionPair
          translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucket.step2.pr"
        />
      </li>
    </ul>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        Array [
          "create",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.webhook.step3"
    />
  </li>
</Fragment>
`;

exports[`should render correctly for bitbucket server: with branches disabled 1`] = `
<Fragment>
  <li>
    <FormattedMessage
      defaultMessage="onboarding.tutorial.with.jenkins.webhook.step1.sentence"
      id="onboarding.tutorial.with.jenkins.webhook.step1.sentence"
      values={
        Object {
          "link": <a
            href="http://bbs.enterprise.com/plugins/servlet/webhooks/projects/PROJECT_KEY/repos/repo-slug/create"
            rel="noopener noreferrer"
            target="_blank"
          >
            onboarding.tutorial.with.jenkins.webhook.bitbucket.step1.link
          </a>,
        }
      }
    />
    <ul
      className="list-styled"
    >
      <li>
        <LabelActionPair
          translationKey="onboarding.tutorial.with.jenkins.webhook.step1.name"
        />
      </li>
      <li
        className="abs-width-600"
      >
        <p>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucket.step1.url"
          />
        </p>
        <CodeSnippet
          isOneLine={true}
          snippet="***JENKINS_SERVER_URL***/job/***JENKINS_JOB_NAME***/build?token=***JENKINS_BUILD_TRIGGER_TOKEN***"
        />
      </li>
    </ul>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        Array [
          "events",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucket.step2"
    />
    <ul
      className="list-styled"
    >
      <li>
        <LabelActionPair
          translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucket.step2.repo"
        />
      </li>
    </ul>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        Array [
          "create",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.webhook.step3"
    />
  </li>
</Fragment>
`;

exports[`should render correctly for bitbucket server: with no alm binding 1`] = `
<Fragment>
  <li>
    <FormattedMessage
      defaultMessage="onboarding.tutorial.with.jenkins.webhook.step1.sentence"
      id="onboarding.tutorial.with.jenkins.webhook.step1.sentence"
      values={
        Object {
          "link": "onboarding.tutorial.with.jenkins.webhook.bitbucket.step1.link",
        }
      }
    />
    <ul
      className="list-styled"
    >
      <li>
        <LabelActionPair
          translationKey="onboarding.tutorial.with.jenkins.webhook.step1.name"
        />
      </li>
      <li
        className="abs-width-600"
      >
        <p>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucket.step1.url"
          />
        </p>
        <CodeSnippet
          isOneLine={true}
          snippet="***JENKINS_SERVER_URL***/bitbucket-scmsource-hook/notify?server_url=***BITBUCKET_URL***"
        />
        <Alert
          variant="info"
        >
          onboarding.tutorial.with.jenkins.webhook.bitbucket.step1.url.warning
        </Alert>
      </li>
    </ul>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        Array [
          "events",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucket.step2"
    />
    <ul
      className="list-styled"
    >
      <li>
        <LabelActionPair
          translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucket.step2.repo"
        />
      </li>
      <li>
        <LabelActionPair
          translationKey="onboarding.tutorial.with.jenkins.webhook.bitbucket.step2.pr"
        />
      </li>
    </ul>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        Array [
          "create",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.webhook.step3"
    />
  </li>
</Fragment>
`;
